--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,10 @@
 # Ignore all mlruns folders at any level
 **/mlruns/
 
+# Ignore attributes and sensitive terraform files
 .gitattributes
+terraform.tfvars
+.terraform*
+terraform.tfstate*
+*.tfstate.backup
+.terraform.lock.hcl
